# emu6502

./: CMakeLists.txt  README.md  app.overlay  prj.conf  test.nes
boards/: lichee_zero.conf
src/: main.c
src/nes/: bus.c  bus.h  cartridge.c  cartridge.h  controller.c  controller.h  cpu_6502.c  cpu_6502.h  nes_system.c  nes_system.h  ppu.c  ppu.h
src/platform/: sd_card.c  sd_card.h
src/ui/: ui_common.h  ui_filebrowser.c  ui_filebrowser.h  ui_game.c  ui_game.h
